# lifelog

./: Cargo.toml  README.md  flake.nix
src/: db.rs  mac.rs  main.rs  sampler.rs  screentime.rs  server.rs
